--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -4,6 +4,10 @@
     margin: 5rem auto;
     display: flex;
     justify-content: space-between;
+
+    @media only screen and(max-width: 900px){
+        flex-direction: column;
+    }
     
     .pay-info{
         display: flex;
