--- a/src/pages/sign-in/sign-in.styles.scss
+++ b/src/pages/sign-in/sign-in.styles.scss
@@ -1,15 +1,9 @@
 .sign-in-page{
 
     .sign-in-container{
-        width: 80%;
+        width: 90%;
         margin: 5rem auto;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        
-        @media only screen and(max-width: 1000px){
-            flex-direction: column;
-        }
+        justify-content: center;
     }
 }
