--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -9,12 +9,41 @@
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 1px solid #787878;
     background-color: #f3f3f3;
     z-index: 10;
 
+    @media only screen and(max-width: 1400px){
+        top: 14rem;
+    }
+    @media only screen and(max-width: 1000px){
+        top: 15rem;
+    }
+
+    @media only screen and(max-width: 600px){
+        top: 17rem;
+    }
+
+    
+
     .cart-items{
         overflow-y: scroll;
+        &::-webkit-scrollbar{
+            width: 10px;
+            padding: 3px;
+            margin: 10px;
+        }
+        &::-webkit-scrollbar-track{
+            background: #f3f3f3;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: #787878; 
+            border-radius: 10px;
+    
+            &:hover{
+                background: #5a5a5a; 
+            }
+        }
         
         .empty-message{
             font-size: $default-font-size;
