--- a/src/components/checkout-items.component.jsx/checkout-items.styles.scss
+++ b/src/components/checkout-items.component.jsx/checkout-items.styles.scss
@@ -1,21 +1,15 @@
 .checkout-items{
     width: 100%;
-    margin-right: 20rem;
-
-    .total{
-        display: flex;
-        justify-content: space-between;
-        font-size: 1.6rem;
-        h1{
-            font-weight: 500;
-            margin: 1rem 2rem;
-        }
-        p{
-            font-size: 2rem;
-            font-weight: 500;
-        }
+    margin-right: 15rem;
+    @media only screen and(max-width: 900px){
+        margin-right: 0;
+        margin-bottom: 5rem;
     }
 
+    @media only screen and(max-width: 600px){
+        margin-right: 0;
+        margin-bottom: 5rem;
+    }
     .message{
         font-size: 2rem;
         text-align: center;
