--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -32,6 +32,7 @@
     .inverted{
         background: white;
         color: black;
+        border: 2px solid black;
         &:hover{
             color: white;
             background: black;
