--- a/src/components/search-dropdown-item/search-dropdown-item.styles.scss
+++ b/src/components/search-dropdown-item/search-dropdown-item.styles.scss
@@ -5,9 +5,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid black;
     cursor: pointer;
+    
+    
     &:hover{
-        background: white;
+        background: rgba(0, 0, 0, 0.3);
     }
 
     .search-image{
@@ -30,11 +33,16 @@
 
     .item-info{
             font-size: 1.4rem;
+            color: black;
+
+            .item-price{
+                color: inherit;
+            }
     }
 
     .custom-button{
         margin-right: 2rem;
-        font-size: 1.2rem;
+        font-size: $default-font-size;
         padding: 5px;
         min-width: 7rem;
 
