--- a/src/components/search-dropdown/search-dropdown.styles.scss
+++ b/src/components/search-dropdown/search-dropdown.styles.scss
@@ -1,30 +1,83 @@
 
-
 .search-dropdown{
-    position: absolute;
-    left: 50%;
-    width: 40%;
-    top: 5rem;
-
-    @media only screen and(max-width: 1000px){
-        width: 60%; 
-    }
-    @media only screen and(max-width: 600px){
-        width: 90%; 
-    }
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    overflow: hidden;
+    left: 0;
+    background: rgba(0, 0, 0, 0.95);
+    z-index: 110;
+    text-align: center;
     
 
-    .search-dropdown-content{
-        
-        width: 100%;
-        position: relative;
-        left: -50%;
-        background: #f3f3f3;
-        overflow-y: scroll;
-        height: auto;
-        max-height: 40rem;
-        z-index: 110;
-        border: 1px solid #00000041;
+    .search-input{
+        width: 40%;
+        margin: 5rem auto;
+        height: 40px;
+        padding-left: 2rem;
+        border: 2px solid #787878;
+        border-radius: 3rem;
+        background-color: #f3f3f3;
+        font-size: 1.6rem;
+        color: #272727;
+        outline: none;
+        z-index: 100;
+
+        &:focus{
+            border: 2px solid #383838;
+        }
+
+            
     }
+    ::placeholder{
+        color: #383838;
+        letter-spacing: 1px;
+    }
+
+    .close-icon{
+        position: absolute;
+        font-size: 3rem;
+        top: 30px;
+        right: 30px;
+        color: #787878;
+        cursor: pointer;
+
+        &:hover{
+            color: #f3f3f3;
+        }
+    }
+    .search-dropdown-content{
+        position: relative;
+        width: 50%;
+        margin: 0 auto;
+        height: max-content;
+        max-height: 50vh;
+        overflow-y: scroll;
+        background: #f3f3f3;
+
+        &::-webkit-scrollbar{
+            width: 10px;
+            padding: 3px;
+            margin: 10px;
+        }
+        &::-webkit-scrollbar-track{
+            background: #f3f3f3;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: #787878; 
+            border-radius: 10px;
+    
+            &:hover{
+                background: #5a5a5a; 
+            }
+        }
+
+        @media only screen and(max-width: 800px){
+            width: 90%;
+        }
+    }
+
+    
 
 }
