--- a/src/components/top-bar/top-bar.styles.scss
+++ b/src/components/top-bar/top-bar.styles.scss
@@ -1,43 +1,63 @@
 @import '../../assets/sass/variables';
 
 .top-bar{
-    // width: 100%;
-    height: 5rem;
+    padding: 0 8rem;
+    height: 50px;
     background: black;
     display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: space-between;
+
+    @media only screen and(max-width: 600px){
+        padding: 0 4rem;
+    }
+    @media only screen and(max-width: 400px){
+        padding: 0 2rem;
+    }
     
-    .search-box{
-        width: 100%;
+    .social-icons{
         
-        .search-input{
-            position: relative;
-            width: 40%;
-            left: 4rem;
-            margin: 0 auto;
-            height: 3rem;
-            padding-left: 2rem;
-            border: none;
-            border-radius: 3rem;
-            outline: none;
-            background: #f3f3f3;
-            z-index: 100;
-            &:focus{
-                
-                border: 2px solid rgb(103, 181, 255);
+        .social-icon{
+            font-size: 2rem;
+            margin: 1rem;
+            text-decoration: none;
+            color: #787878;
+            &:hover{
+                color: #f3f3f3;
             }
         }
-
-        
     }
     
-    
+    .search-icon{
+        color: #787878;
+        cursor: pointer;
+        font-size: $default-font-size;
+
+        &:hover{
+            color: #f3f3f3;
+        }
+    }
     .link{
         text-decoration: none;
-        font-size: $default-font-size;
-        width: 15rem;
-        color: white;
+        font-size: 1.4rem;
+        letter-spacing: 1px;
+        margin: 1rem;
+        color: #f3f3f3;
         cursor: pointer;
     }
+    
+    .buttons{
+       
+        
+    
+        .sign-up-button{
+            color: black;
+            background: #f3f3f3;
+            width: max-content;
+            padding: 5px;
+            border-radius: 5px;
+            font-weight: 500;
+        }
+    }
+    
 }
