--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -1,16 +1,15 @@
-@import '../../assets/sass/variables';
+@import '../../assets/sass/main';
 .about{
     color: white;
     text-align: center;
 
     .info{
-        
-        width: 80%;
+        width: 90%;
         margin: 0 auto;
         letter-spacing: 4px;
         background: #000000a4; 
 
-        @media only screen and(max-width: 600px){
+        @include responsive(phone){
             width: 100%;
             letter-spacing: 3px;
         }
@@ -20,14 +19,14 @@
             font-weight: 400;
             padding-top: 5rem;
         }
-        .about-p{
+        .about-text{
             font-size: 2rem;
             line-height: 3rem;
             font-weight: 300;
             padding: 10rem;
             margin-bottom: 0;
 
-            @media only screen and(max-width: 600px){
+            @include responsive(phone){
                 padding: 2rem;
             }
         }
