--- a/src/components/latest-arrivals/latest-arrivals.styles.scss
+++ b/src/components/latest-arrivals/latest-arrivals.styles.scss
@@ -1,12 +1,18 @@
+@import '../../assets/sass/main';
+
 .latest-arrivals{
     
-    
-
     .items{
-        width: 80%;
-        margin: 0 auto;
-        display: flex;
-        flex-wrap: wrap;
+
+        @include GridList;
+
+        @include responsive(tab-small){
+            grid-template-columns: repeat(2, minmax(25rem, 1fr));
+        }
+    
+        @include responsive(phone-small){
+            grid-template-columns: repeat(1, minmax(25rem, 1fr));
+        }
     }
 
 }
