--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,15 +1,15 @@
 $default-font-size: 1.6rem;
+$small-font-size: 1.2rem;
 
-@mixin ProductTitle {
-    font-size: 2rem;
-    // font-weight: 400;
-    // font-family: 'Roboto Mono', monospace;
-    color: black;
-    letter-spacing: 5px;
-}
+$color-black: #000000;
+$color-white: #ffffff;
 
-@mixin ProductPrice {
-    font-size: $default-font-size;
-    color: #787878;
-    margin: 0;
-}
+$color-gray-lighter: #f3f3f3;
+$color-gray: 	#C0C0C0;
+$color-gray-darker: #787878;
+
+
+$color-red: #FF6347;    
+$color-green-lighter: #00A500;
+$color-green: 	#008000;
+$color-green-darker: #006400;
