--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -1,4 +1,4 @@
-@import '../../assets/sass/variables';
+@import '../../assets/sass/main';
 .cart-item{
     width: 100%;
     display: flex;
@@ -15,7 +15,7 @@
     }
 
     .item-info{   
-            font-size: 1.2rem;
+            font-size: $small-font-size;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -33,10 +33,14 @@
         position: absolute;
         margin: 0;
         right: 1rem;
-        font-size: 1.6rem;
-        color: red;
+        font-size: $default-font-size;
+        color: $color-red ;
         display: none;
         user-select: none;
+        
+        @media only screen and (any-hover: none) {
+            display: initial;
+        }
     }
 
     &:hover{
