--- a/src/components/category-card/category-card.styles.scss
+++ b/src/components/category-card/category-card.styles.scss
@@ -1,15 +1,14 @@
-@import '../../assets/sass/variables';
+@import '../../assets/sass/main';
 
 .category-card{
     position: relative;
-    flex-shrink: 2;
-    flex-grow: 1;
-    margin: 5rem;
+    width: 25rem;
+    height: 48rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    flex-basis: 30rem;
+    
     &:hover{
         opacity: 0.8;
     }
@@ -20,9 +19,9 @@
     .item-title{
         @include ProductTitle;
     }
-    img{
-        width: 35rem;
-        height: 40rem;
+    .category-image{
+        width: 100%;
+        height: 35rem;
         object-fit: cover;
         
     }
