--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,41 +1,41 @@
-@import '../../assets/sass/variables';
+@import '../../assets/sass/main';
 
 .collection-item{
     position: relative;
-    width: 30rem;
-    flex-shrink: 1;
-    flex-grow: 1;
-    margin: 5rem;
+    width: 25rem;
+    height: 48rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    // flex-basis: 35rem;
     
-    flex: auto;
     .item-title{
         @include ProductTitle;
-        width: 30rem;
+        width: 25rem;
     }
+
     .item-price{
         @include ProductPrice;
     }
+
     .collection-image{
         width: 100%;
-        height: 40rem;
-        object-fit: contain;
-        
-        
+        height: 35rem;
+        object-fit: cover;
     }
-    button{
-        position: absolute;
-        top: 35rem;
-        opacity: 0; 
 
+    .custom-button{
+        position: absolute;
+        top: 30rem;
+        opacity: 0; 
         
+
+        @media only screen and (any-hover: none) {
+            opacity: 0.7;
+        }
     }
     &:hover{
-        button{
+        .custom-button{
             opacity: 0.9;
         }
     }
