--- a/src/components/heading-small/heading-small.styles.scss
+++ b/src/components/heading-small/heading-small.styles.scss
@@ -1,6 +1,7 @@
+@import '../../assets/sass/main';
 .heading-small{
     width: 100%;
-    background: #f3f3f3;
+    background: $color-gray-lighter;
     text-align: center;
 
     .heading-h1{
