--- a/src/components/jumbotron/jumbotron.styles.scss
+++ b/src/components/jumbotron/jumbotron.styles.scss
@@ -1,8 +1,9 @@
+@import '../../assets/sass/main';
 .jumbotron{
     margin: 0 auto;
     display: flex;
     height: 53rem;
-    @media only screen and(max-width: 800px){
+    @include responsive(tab-small){
         justify-content: center;
       }
     
