--- a/src/components/newsletter/newsletter.styles.scss
+++ b/src/components/newsletter/newsletter.styles.scss
@@ -1,3 +1,5 @@
+@import '../../assets/sass/main';
+
 .newsletter{
     .form-subscribe{
         width: 60%;
@@ -5,10 +7,12 @@
         padding-bottom: 10rem;
         display: flex;
         justify-content: center;
-        @media only screen and(max-width: 1000px){
+
+        @include responsive(tab-large){
             width: 90%;
         }
-        @media only screen and(max-width: 400px){
+        
+        @include responsive(phone-small){
             flex-direction: column;
             align-items: center;
         }
@@ -18,19 +22,21 @@
             margin-right: 1rem;
             font-family: inherit;
             outline: none;
+            padding-left: 10px;
+
             @media only screen and(max-width: 600px){
                 width: 80%;
             }
-            @media only screen and(max-width: 400px){
+
+            @include responsive(phone-small){
                 margin-bottom: 2rem;
                 height: 4rem;
             }
             
-
-            &::placeholder{
-                padding-left: 10px;
-                letter-spacing: 3px;
-            }
+        }
+        ::placeholder{
+            letter-spacing: 2px;
         }
     }
+    
 }
