--- a/src/components/search-dropdown/search-dropdown.styles.scss
+++ b/src/components/search-dropdown/search-dropdown.styles.scss
@@ -1,37 +1,40 @@
+@import '../../assets/sass/main';
 
 .search-dropdown{
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    top: 0;
-    overflow: hidden;
-    left: 0;
     background: rgba(0, 0, 0, 0.95);
-    z-index: 110;
     text-align: center;
-    
+    overflow: hidden;
+    z-index: 110;
 
     .search-input{
         width: 40%;
         margin: 5rem auto;
         height: 40px;
         padding-left: 2rem;
-        border: 2px solid #787878;
+        border: 2px solid $color-gray-darker;
         border-radius: 3rem;
-        background-color: #f3f3f3;
-        font-size: 1.6rem;
-        color: #272727;
+        background-color: $color-gray-lighter;
+        font-size: $default-font-size;
         outline: none;
         z-index: 100;
 
         &:focus{
-            border: 2px solid #383838;
+            border: 2px solid $color-gray-darker;
+        }
+
+        @include responsive(phone){
+            width: 60%;
         }
 
             
     }
     ::placeholder{
-        color: #383838;
+        color: $color-gray-darker;
         letter-spacing: 1px;
     }
 
@@ -40,11 +43,15 @@
         font-size: 3rem;
         top: 30px;
         right: 30px;
-        color: #787878;
+        color: $color-gray-darker;
         cursor: pointer;
 
         &:hover{
-            color: #f3f3f3;
+            color: $color-gray-lighter;
+        }
+        @include responsive(phone){
+            top: 20px;
+            right: 20px;
         }
     }
     .search-dropdown-content{
@@ -54,7 +61,7 @@
         height: max-content;
         max-height: 50vh;
         overflow-y: scroll;
-        background: #f3f3f3;
+        background: $color-gray-lighter;
 
         &::-webkit-scrollbar{
             width: 10px;
@@ -62,10 +69,10 @@
             margin: 10px;
         }
         &::-webkit-scrollbar-track{
-            background: #f3f3f3;
+            background: $color-gray-lighter;
         }
         &::-webkit-scrollbar-thumb {
-            background: #787878; 
+            background: $color-gray-darker; 
             border-radius: 10px;
     
             &:hover{
@@ -73,7 +80,7 @@
             }
         }
 
-        @media only screen and(max-width: 800px){
+        @include responsive(tab-small){
             width: 90%;
         }
     }
