--- a/src/components/sign-up/sign-up.styles.scss
+++ b/src/components/sign-up/sign-up.styles.scss
@@ -1,3 +1,5 @@
+@import '../../assets/sass/main';
+
 .sign-up{
     
     width: 50rem;
@@ -7,7 +9,7 @@
     align-items: space-between;
     text-transform: uppercase;
     text-align: center;
-    background: #f3f3f3;
+    background: $color-gray-lighter;
 
     .register-header{
         margin-bottom: 5rem;
@@ -20,19 +22,19 @@
 
         input[type='password'], input[type='email'], input[type='text']{
             
-            font-size: 1.6rem;
+            font-size: $default-font-size;
             letter-spacing: 2px;
             padding: 2rem;
             margin-bottom: 5px;
-            background: #f3f3f3;
+            background: $color-gray-lighter;
             border: none;
-            border-left: 3px solid #f3f3f3;
-            border-bottom: 1px solid black;
+            border-left: 3px solid $color-gray-lighter;
+            border-bottom: 1px solid $color-black;
             outline: none;
             
             &:focus{
-                border-left: 3px solid green;
-                border-bottom: 1px solid #f3f3f3;
+                border-left: 3px solid $color-green;
+                border-bottom: 1px solid $color-gray-lighter;
             }
         }
 
