--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,3 +1,4 @@
+@import '../../assets/sass/main';
 
 .checkout-container{
     width: 90%;
@@ -5,11 +6,12 @@
     display: flex;
     justify-content: space-between;
 
-    @media only screen and(max-width: 900px){
+    @include responsive(tab-large){
         flex-direction: column;
     }
     
     .pay-info{
+        margin: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -19,12 +21,12 @@
 
         .test-info{
             margin-top: 5rem;
-            font-size: 1.6rem;
-            background: #f3f3f3;
+            font-size: $default-font-size;
+            background: $color-gray-lighter;
             padding: 3rem;
             
             p{
-                color: red;
+                color: $color-red;
             }
         }
     }
@@ -37,7 +39,7 @@
     h3, a{
         text-decoration: none;
         font-size: 3rem;
-        color: red;
+        color: $color-red;
         font-weight: 300;
     }
 
