--- a/src/assets/sass/_mixins.scss
+++ b/src/assets/sass/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin ProductTitle {
-    font-size: $default-font-size;
+    font-size: $small-font-size;
     color: $color-black;
     letter-spacing: 5px;
 }
 
 @mixin ProductPrice {
-    font-size: $default-font-size;
+    font-size: 1.4rem;
     color: $color-gray-darker;
     margin: 0;
 }
